parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    NOT
    OR

Grammar

Rule 0     S' -> programa
Rule 1     programa -> declaraciones
Rule 2     declaraciones -> declaraciones declaracion
Rule 3     declaraciones -> declaracion
Rule 4     declaracion -> declaracion_variable
Rule 5     declaracion -> asignacion
Rule 6     declaracion -> estructura_control
Rule 7     declaracion -> imprimir
Rule 8     declaracion_variable -> tipo IDENTIFICADOR ASIG expresion PUNTOCOMA
Rule 9     tipo -> TIPO_ENTERO
Rule 10    tipo -> TIPO_DECIMAL
Rule 11    tipo -> TIPO_CARACTER
Rule 12    tipo -> TIPO_BOOLEANO
Rule 13    asignacion -> IDENTIFICADOR ASIG expresion PUNTOCOMA
Rule 14    estructura_control -> estructura_si
Rule 15    estructura_control -> estructura_mientras
Rule 16    estructura_control -> estructura_para
Rule 17    estructura_si -> SI PARIZQ condicion PARDER LLAVEIZQ declaraciones LLAVEDER
Rule 18    estructura_si -> SI PARIZQ condicion PARDER LLAVEIZQ declaraciones LLAVEDER SINO PARIZQ condicion PARDER LLAVEIZQ declaraciones LLAVEDER
Rule 19    estructura_si -> SI PARIZQ condicion PARDER LLAVEIZQ declaraciones LLAVEDER SINO PARIZQ condicion PARDER LLAVEIZQ declaraciones LLAVEDER EOC LLAVEIZQ declaraciones LLAVEDER
Rule 20    estructura_si -> SI PARIZQ condicion PARDER LLAVEIZQ declaraciones LLAVEDER EOC LLAVEIZQ declaraciones LLAVEDER
Rule 21    estructura_mientras -> MIENTRAS PARIZQ condicion PARDER LLAVEIZQ declaraciones LLAVEDER
Rule 22    estructura_para -> PARA PARIZQ inicializacion_para PUNTOCOMA condicion PUNTOCOMA incremento_para PARDER LLAVEIZQ declaraciones LLAVEDER
Rule 23    inicializacion_para -> tipo IDENTIFICADOR ASIG expresion
Rule 24    inicializacion_para -> IDENTIFICADOR ASIG expresion
Rule 25    incremento_para -> IDENTIFICADOR ASIG IDENTIFICADOR SUMA NUMERO
Rule 26    incremento_para -> IDENTIFICADOR ASIG IDENTIFICADOR RESTA NUMERO
Rule 27    incremento_para -> IDENTIFICADOR SUMA SUMA
Rule 28    incremento_para -> IDENTIFICADOR RESTA RESTA
Rule 29    condicion -> expresion IGUAL expresion
Rule 30    condicion -> expresion DIFERENTE expresion
Rule 31    condicion -> expresion MENOR expresion
Rule 32    condicion -> expresion MAYOR expresion
Rule 33    condicion -> expresion MENORIGUAL expresion
Rule 34    condicion -> expresion MAYORIGUAL expresion
Rule 35    expresion -> expresion SUMA termino
Rule 36    expresion -> expresion RESTA termino
Rule 37    expresion -> expresion MULT termino
Rule 38    expresion -> expresion DIV termino
Rule 39    expresion -> termino
Rule 40    termino -> IDENTIFICADOR
Rule 41    termino -> NUMERO
Rule 42    termino -> DECIMAL
Rule 43    termino -> CARACTER
Rule 44    termino -> TRUE
Rule 45    termino -> FALSE
Rule 46    termino -> PARIZQ expresion PARDER
Rule 47    imprimir -> PRINT PARIZQ expresion PARDER PUNTOCOMA

Terminals, with rules where they appear

AND                  : 
ASIG                 : 8 13 23 24 25 26
CARACTER             : 43
DECIMAL              : 42
DIFERENTE            : 30
DIV                  : 38
EOC                  : 19 20
FALSE                : 45
IDENTIFICADOR        : 8 13 23 24 25 25 26 26 27 28 40
IGUAL                : 29
LLAVEDER             : 17 18 18 19 19 19 20 20 21 22
LLAVEIZQ             : 17 18 18 19 19 19 20 20 21 22
MAYOR                : 32
MAYORIGUAL           : 34
MENOR                : 31
MENORIGUAL           : 33
MIENTRAS             : 21
MULT                 : 37
NOT                  : 
NUMERO               : 25 26 41
OR                   : 
PARA                 : 22
PARDER               : 17 18 18 19 19 20 21 22 46 47
PARIZQ               : 17 18 18 19 19 20 21 22 46 47
PRINT                : 47
PUNTOCOMA            : 8 13 22 22 47
RESTA                : 26 28 28 36
SI                   : 17 18 19 20
SINO                 : 18 19
SUMA                 : 25 27 27 35
TIPO_BOOLEANO        : 12
TIPO_CARACTER        : 11
TIPO_DECIMAL         : 10
TIPO_ENTERO          : 9
TRUE                 : 44
error                : 

Nonterminals, with rules where they appear

asignacion           : 5
condicion            : 17 18 18 19 19 20 21 22
declaracion          : 2 3
declaracion_variable : 4
declaraciones        : 1 2 17 18 18 19 19 19 20 20 21 22
estructura_control   : 6
estructura_mientras  : 15
estructura_para      : 16
estructura_si        : 14
expresion            : 8 13 23 24 29 29 30 30 31 31 32 32 33 33 34 34 35 36 37 38 46 47
imprimir             : 7
incremento_para      : 22
inicializacion_para  : 22
programa             : 0
termino              : 35 36 37 38 39
tipo                 : 8 23

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . declaraciones
    (2) declaraciones -> . declaraciones declaracion
    (3) declaraciones -> . declaracion
    (4) declaracion -> . declaracion_variable
    (5) declaracion -> . asignacion
    (6) declaracion -> . estructura_control
    (7) declaracion -> . imprimir
    (8) declaracion_variable -> . tipo IDENTIFICADOR ASIG expresion PUNTOCOMA
    (13) asignacion -> . IDENTIFICADOR ASIG expresion PUNTOCOMA
    (14) estructura_control -> . estructura_si
    (15) estructura_control -> . estructura_mientras
    (16) estructura_control -> . estructura_para
    (47) imprimir -> . PRINT PARIZQ expresion PARDER PUNTOCOMA
    (9) tipo -> . TIPO_ENTERO
    (10) tipo -> . TIPO_DECIMAL
    (11) tipo -> . TIPO_CARACTER
    (12) tipo -> . TIPO_BOOLEANO
    (17) estructura_si -> . SI PARIZQ condicion PARDER LLAVEIZQ declaraciones LLAVEDER
    (18) estructura_si -> . SI PARIZQ condicion PARDER LLAVEIZQ declaraciones LLAVEDER SINO PARIZQ condicion PARDER LLAVEIZQ declaraciones LLAVEDER
    (19) estructura_si -> . SI PARIZQ condicion PARDER LLAVEIZQ declaraciones LLAVEDER SINO PARIZQ condicion PARDER LLAVEIZQ declaraciones LLAVEDER EOC LLAVEIZQ declaraciones LLAVEDER
    (20) estructura_si -> . SI PARIZQ condicion PARDER LLAVEIZQ declaraciones LLAVEDER EOC LLAVEIZQ declaraciones LLAVEDER
    (21) estructura_mientras -> . MIENTRAS PARIZQ condicion PARDER LLAVEIZQ declaraciones LLAVEDER
    (22) estructura_para -> . PARA PARIZQ inicializacion_para PUNTOCOMA condicion PUNTOCOMA incremento_para PARDER LLAVEIZQ declaraciones LLAVEDER

    IDENTIFICADOR   shift and go to state 9
    PRINT           shift and go to state 13
    TIPO_ENTERO     shift and go to state 14
    TIPO_DECIMAL    shift and go to state 15
    TIPO_CARACTER   shift and go to state 16
    TIPO_BOOLEANO   shift and go to state 17
    SI              shift and go to state 18
    MIENTRAS        shift and go to state 19
    PARA            shift and go to state 20

    programa                       shift and go to state 1
    declaraciones                  shift and go to state 2
    declaracion                    shift and go to state 3
    declaracion_variable           shift and go to state 4
    asignacion                     shift and go to state 5
    estructura_control             shift and go to state 6
    imprimir                       shift and go to state 7
    tipo                           shift and go to state 8
    estructura_si                  shift and go to state 10
    estructura_mientras            shift and go to state 11
    estructura_para                shift and go to state 12

state 1

    (0) S' -> programa .



state 2

    (1) programa -> declaraciones .
    (2) declaraciones -> declaraciones . declaracion
    (4) declaracion -> . declaracion_variable
    (5) declaracion -> . asignacion
    (6) declaracion -> . estructura_control
    (7) declaracion -> . imprimir
    (8) declaracion_variable -> . tipo IDENTIFICADOR ASIG expresion PUNTOCOMA
    (13) asignacion -> . IDENTIFICADOR ASIG expresion PUNTOCOMA
    (14) estructura_control -> . estructura_si
    (15) estructura_control -> . estructura_mientras
    (16) estructura_control -> . estructura_para
    (47) imprimir -> . PRINT PARIZQ expresion PARDER PUNTOCOMA
    (9) tipo -> . TIPO_ENTERO
    (10) tipo -> . TIPO_DECIMAL
    (11) tipo -> . TIPO_CARACTER
    (12) tipo -> . TIPO_BOOLEANO
    (17) estructura_si -> . SI PARIZQ condicion PARDER LLAVEIZQ declaraciones LLAVEDER
    (18) estructura_si -> . SI PARIZQ condicion PARDER LLAVEIZQ declaraciones LLAVEDER SINO PARIZQ condicion PARDER LLAVEIZQ declaraciones LLAVEDER
    (19) estructura_si -> . SI PARIZQ condicion PARDER LLAVEIZQ declaraciones LLAVEDER SINO PARIZQ condicion PARDER LLAVEIZQ declaraciones LLAVEDER EOC LLAVEIZQ declaraciones LLAVEDER
    (20) estructura_si -> . SI PARIZQ condicion PARDER LLAVEIZQ declaraciones LLAVEDER EOC LLAVEIZQ declaraciones LLAVEDER
    (21) estructura_mientras -> . MIENTRAS PARIZQ condicion PARDER LLAVEIZQ declaraciones LLAVEDER
    (22) estructura_para -> . PARA PARIZQ inicializacion_para PUNTOCOMA condicion PUNTOCOMA incremento_para PARDER LLAVEIZQ declaraciones LLAVEDER

    $end            reduce using rule 1 (programa -> declaraciones .)
    IDENTIFICADOR   shift and go to state 9
    PRINT           shift and go to state 13
    TIPO_ENTERO     shift and go to state 14
    TIPO_DECIMAL    shift and go to state 15
    TIPO_CARACTER   shift and go to state 16
    TIPO_BOOLEANO   shift and go to state 17
    SI              shift and go to state 18
    MIENTRAS        shift and go to state 19
    PARA            shift and go to state 20

    declaracion                    shift and go to state 21
    declaracion_variable           shift and go to state 4
    asignacion                     shift and go to state 5
    estructura_control             shift and go to state 6
    imprimir                       shift and go to state 7
    tipo                           shift and go to state 8
    estructura_si                  shift and go to state 10
    estructura_mientras            shift and go to state 11
    estructura_para                shift and go to state 12

state 3

    (3) declaraciones -> declaracion .

    IDENTIFICADOR   reduce using rule 3 (declaraciones -> declaracion .)
    PRINT           reduce using rule 3 (declaraciones -> declaracion .)
    TIPO_ENTERO     reduce using rule 3 (declaraciones -> declaracion .)
    TIPO_DECIMAL    reduce using rule 3 (declaraciones -> declaracion .)
    TIPO_CARACTER   reduce using rule 3 (declaraciones -> declaracion .)
    TIPO_BOOLEANO   reduce using rule 3 (declaraciones -> declaracion .)
    SI              reduce using rule 3 (declaraciones -> declaracion .)
    MIENTRAS        reduce using rule 3 (declaraciones -> declaracion .)
    PARA            reduce using rule 3 (declaraciones -> declaracion .)
    $end            reduce using rule 3 (declaraciones -> declaracion .)
    LLAVEDER        reduce using rule 3 (declaraciones -> declaracion .)


state 4

    (4) declaracion -> declaracion_variable .

    IDENTIFICADOR   reduce using rule 4 (declaracion -> declaracion_variable .)
    PRINT           reduce using rule 4 (declaracion -> declaracion_variable .)
    TIPO_ENTERO     reduce using rule 4 (declaracion -> declaracion_variable .)
    TIPO_DECIMAL    reduce using rule 4 (declaracion -> declaracion_variable .)
    TIPO_CARACTER   reduce using rule 4 (declaracion -> declaracion_variable .)
    TIPO_BOOLEANO   reduce using rule 4 (declaracion -> declaracion_variable .)
    SI              reduce using rule 4 (declaracion -> declaracion_variable .)
    MIENTRAS        reduce using rule 4 (declaracion -> declaracion_variable .)
    PARA            reduce using rule 4 (declaracion -> declaracion_variable .)
    $end            reduce using rule 4 (declaracion -> declaracion_variable .)
    LLAVEDER        reduce using rule 4 (declaracion -> declaracion_variable .)


state 5

    (5) declaracion -> asignacion .

    IDENTIFICADOR   reduce using rule 5 (declaracion -> asignacion .)
    PRINT           reduce using rule 5 (declaracion -> asignacion .)
    TIPO_ENTERO     reduce using rule 5 (declaracion -> asignacion .)
    TIPO_DECIMAL    reduce using rule 5 (declaracion -> asignacion .)
    TIPO_CARACTER   reduce using rule 5 (declaracion -> asignacion .)
    TIPO_BOOLEANO   reduce using rule 5 (declaracion -> asignacion .)
    SI              reduce using rule 5 (declaracion -> asignacion .)
    MIENTRAS        reduce using rule 5 (declaracion -> asignacion .)
    PARA            reduce using rule 5 (declaracion -> asignacion .)
    $end            reduce using rule 5 (declaracion -> asignacion .)
    LLAVEDER        reduce using rule 5 (declaracion -> asignacion .)


state 6

    (6) declaracion -> estructura_control .

    IDENTIFICADOR   reduce using rule 6 (declaracion -> estructura_control .)
    PRINT           reduce using rule 6 (declaracion -> estructura_control .)
    TIPO_ENTERO     reduce using rule 6 (declaracion -> estructura_control .)
    TIPO_DECIMAL    reduce using rule 6 (declaracion -> estructura_control .)
    TIPO_CARACTER   reduce using rule 6 (declaracion -> estructura_control .)
    TIPO_BOOLEANO   reduce using rule 6 (declaracion -> estructura_control .)
    SI              reduce using rule 6 (declaracion -> estructura_control .)
    MIENTRAS        reduce using rule 6 (declaracion -> estructura_control .)
    PARA            reduce using rule 6 (declaracion -> estructura_control .)
    $end            reduce using rule 6 (declaracion -> estructura_control .)
    LLAVEDER        reduce using rule 6 (declaracion -> estructura_control .)


state 7

    (7) declaracion -> imprimir .

    IDENTIFICADOR   reduce using rule 7 (declaracion -> imprimir .)
    PRINT           reduce using rule 7 (declaracion -> imprimir .)
    TIPO_ENTERO     reduce using rule 7 (declaracion -> imprimir .)
    TIPO_DECIMAL    reduce using rule 7 (declaracion -> imprimir .)
    TIPO_CARACTER   reduce using rule 7 (declaracion -> imprimir .)
    TIPO_BOOLEANO   reduce using rule 7 (declaracion -> imprimir .)
    SI              reduce using rule 7 (declaracion -> imprimir .)
    MIENTRAS        reduce using rule 7 (declaracion -> imprimir .)
    PARA            reduce using rule 7 (declaracion -> imprimir .)
    $end            reduce using rule 7 (declaracion -> imprimir .)
    LLAVEDER        reduce using rule 7 (declaracion -> imprimir .)


state 8

    (8) declaracion_variable -> tipo . IDENTIFICADOR ASIG expresion PUNTOCOMA

    IDENTIFICADOR   shift and go to state 22


state 9

    (13) asignacion -> IDENTIFICADOR . ASIG expresion PUNTOCOMA

    ASIG            shift and go to state 23


state 10

    (14) estructura_control -> estructura_si .

    IDENTIFICADOR   reduce using rule 14 (estructura_control -> estructura_si .)
    PRINT           reduce using rule 14 (estructura_control -> estructura_si .)
    TIPO_ENTERO     reduce using rule 14 (estructura_control -> estructura_si .)
    TIPO_DECIMAL    reduce using rule 14 (estructura_control -> estructura_si .)
    TIPO_CARACTER   reduce using rule 14 (estructura_control -> estructura_si .)
    TIPO_BOOLEANO   reduce using rule 14 (estructura_control -> estructura_si .)
    SI              reduce using rule 14 (estructura_control -> estructura_si .)
    MIENTRAS        reduce using rule 14 (estructura_control -> estructura_si .)
    PARA            reduce using rule 14 (estructura_control -> estructura_si .)
    $end            reduce using rule 14 (estructura_control -> estructura_si .)
    LLAVEDER        reduce using rule 14 (estructura_control -> estructura_si .)


state 11

    (15) estructura_control -> estructura_mientras .

    IDENTIFICADOR   reduce using rule 15 (estructura_control -> estructura_mientras .)
    PRINT           reduce using rule 15 (estructura_control -> estructura_mientras .)
    TIPO_ENTERO     reduce using rule 15 (estructura_control -> estructura_mientras .)
    TIPO_DECIMAL    reduce using rule 15 (estructura_control -> estructura_mientras .)
    TIPO_CARACTER   reduce using rule 15 (estructura_control -> estructura_mientras .)
    TIPO_BOOLEANO   reduce using rule 15 (estructura_control -> estructura_mientras .)
    SI              reduce using rule 15 (estructura_control -> estructura_mientras .)
    MIENTRAS        reduce using rule 15 (estructura_control -> estructura_mientras .)
    PARA            reduce using rule 15 (estructura_control -> estructura_mientras .)
    $end            reduce using rule 15 (estructura_control -> estructura_mientras .)
    LLAVEDER        reduce using rule 15 (estructura_control -> estructura_mientras .)


state 12

    (16) estructura_control -> estructura_para .

    IDENTIFICADOR   reduce using rule 16 (estructura_control -> estructura_para .)
    PRINT           reduce using rule 16 (estructura_control -> estructura_para .)
    TIPO_ENTERO     reduce using rule 16 (estructura_control -> estructura_para .)
    TIPO_DECIMAL    reduce using rule 16 (estructura_control -> estructura_para .)
    TIPO_CARACTER   reduce using rule 16 (estructura_control -> estructura_para .)
    TIPO_BOOLEANO   reduce using rule 16 (estructura_control -> estructura_para .)
    SI              reduce using rule 16 (estructura_control -> estructura_para .)
    MIENTRAS        reduce using rule 16 (estructura_control -> estructura_para .)
    PARA            reduce using rule 16 (estructura_control -> estructura_para .)
    $end            reduce using rule 16 (estructura_control -> estructura_para .)
    LLAVEDER        reduce using rule 16 (estructura_control -> estructura_para .)


state 13

    (47) imprimir -> PRINT . PARIZQ expresion PARDER PUNTOCOMA

    PARIZQ          shift and go to state 24


state 14

    (9) tipo -> TIPO_ENTERO .

    IDENTIFICADOR   reduce using rule 9 (tipo -> TIPO_ENTERO .)


state 15

    (10) tipo -> TIPO_DECIMAL .

    IDENTIFICADOR   reduce using rule 10 (tipo -> TIPO_DECIMAL .)


state 16

    (11) tipo -> TIPO_CARACTER .

    IDENTIFICADOR   reduce using rule 11 (tipo -> TIPO_CARACTER .)


state 17

    (12) tipo -> TIPO_BOOLEANO .

    IDENTIFICADOR   reduce using rule 12 (tipo -> TIPO_BOOLEANO .)


state 18

    (17) estructura_si -> SI . PARIZQ condicion PARDER LLAVEIZQ declaraciones LLAVEDER
    (18) estructura_si -> SI . PARIZQ condicion PARDER LLAVEIZQ declaraciones LLAVEDER SINO PARIZQ condicion PARDER LLAVEIZQ declaraciones LLAVEDER
    (19) estructura_si -> SI . PARIZQ condicion PARDER LLAVEIZQ declaraciones LLAVEDER SINO PARIZQ condicion PARDER LLAVEIZQ declaraciones LLAVEDER EOC LLAVEIZQ declaraciones LLAVEDER
    (20) estructura_si -> SI . PARIZQ condicion PARDER LLAVEIZQ declaraciones LLAVEDER EOC LLAVEIZQ declaraciones LLAVEDER

    PARIZQ          shift and go to state 25


state 19

    (21) estructura_mientras -> MIENTRAS . PARIZQ condicion PARDER LLAVEIZQ declaraciones LLAVEDER

    PARIZQ          shift and go to state 26


state 20

    (22) estructura_para -> PARA . PARIZQ inicializacion_para PUNTOCOMA condicion PUNTOCOMA incremento_para PARDER LLAVEIZQ declaraciones LLAVEDER

    PARIZQ          shift and go to state 27


state 21

    (2) declaraciones -> declaraciones declaracion .

    IDENTIFICADOR   reduce using rule 2 (declaraciones -> declaraciones declaracion .)
    PRINT           reduce using rule 2 (declaraciones -> declaraciones declaracion .)
    TIPO_ENTERO     reduce using rule 2 (declaraciones -> declaraciones declaracion .)
    TIPO_DECIMAL    reduce using rule 2 (declaraciones -> declaraciones declaracion .)
    TIPO_CARACTER   reduce using rule 2 (declaraciones -> declaraciones declaracion .)
    TIPO_BOOLEANO   reduce using rule 2 (declaraciones -> declaraciones declaracion .)
    SI              reduce using rule 2 (declaraciones -> declaraciones declaracion .)
    MIENTRAS        reduce using rule 2 (declaraciones -> declaraciones declaracion .)
    PARA            reduce using rule 2 (declaraciones -> declaraciones declaracion .)
    $end            reduce using rule 2 (declaraciones -> declaraciones declaracion .)
    LLAVEDER        reduce using rule 2 (declaraciones -> declaraciones declaracion .)


state 22

    (8) declaracion_variable -> tipo IDENTIFICADOR . ASIG expresion PUNTOCOMA

    ASIG            shift and go to state 28


state 23

    (13) asignacion -> IDENTIFICADOR ASIG . expresion PUNTOCOMA
    (35) expresion -> . expresion SUMA termino
    (36) expresion -> . expresion RESTA termino
    (37) expresion -> . expresion MULT termino
    (38) expresion -> . expresion DIV termino
    (39) expresion -> . termino
    (40) termino -> . IDENTIFICADOR
    (41) termino -> . NUMERO
    (42) termino -> . DECIMAL
    (43) termino -> . CARACTER
    (44) termino -> . TRUE
    (45) termino -> . FALSE
    (46) termino -> . PARIZQ expresion PARDER

    IDENTIFICADOR   shift and go to state 29
    NUMERO          shift and go to state 32
    DECIMAL         shift and go to state 33
    CARACTER        shift and go to state 34
    TRUE            shift and go to state 35
    FALSE           shift and go to state 36
    PARIZQ          shift and go to state 37

    expresion                      shift and go to state 30
    termino                        shift and go to state 31

state 24

    (47) imprimir -> PRINT PARIZQ . expresion PARDER PUNTOCOMA
    (35) expresion -> . expresion SUMA termino
    (36) expresion -> . expresion RESTA termino
    (37) expresion -> . expresion MULT termino
    (38) expresion -> . expresion DIV termino
    (39) expresion -> . termino
    (40) termino -> . IDENTIFICADOR
    (41) termino -> . NUMERO
    (42) termino -> . DECIMAL
    (43) termino -> . CARACTER
    (44) termino -> . TRUE
    (45) termino -> . FALSE
    (46) termino -> . PARIZQ expresion PARDER

    IDENTIFICADOR   shift and go to state 29
    NUMERO          shift and go to state 32
    DECIMAL         shift and go to state 33
    CARACTER        shift and go to state 34
    TRUE            shift and go to state 35
    FALSE           shift and go to state 36
    PARIZQ          shift and go to state 37

    expresion                      shift and go to state 38
    termino                        shift and go to state 31

state 25

    (17) estructura_si -> SI PARIZQ . condicion PARDER LLAVEIZQ declaraciones LLAVEDER
    (18) estructura_si -> SI PARIZQ . condicion PARDER LLAVEIZQ declaraciones LLAVEDER SINO PARIZQ condicion PARDER LLAVEIZQ declaraciones LLAVEDER
    (19) estructura_si -> SI PARIZQ . condicion PARDER LLAVEIZQ declaraciones LLAVEDER SINO PARIZQ condicion PARDER LLAVEIZQ declaraciones LLAVEDER EOC LLAVEIZQ declaraciones LLAVEDER
    (20) estructura_si -> SI PARIZQ . condicion PARDER LLAVEIZQ declaraciones LLAVEDER EOC LLAVEIZQ declaraciones LLAVEDER
    (29) condicion -> . expresion IGUAL expresion
    (30) condicion -> . expresion DIFERENTE expresion
    (31) condicion -> . expresion MENOR expresion
    (32) condicion -> . expresion MAYOR expresion
    (33) condicion -> . expresion MENORIGUAL expresion
    (34) condicion -> . expresion MAYORIGUAL expresion
    (35) expresion -> . expresion SUMA termino
    (36) expresion -> . expresion RESTA termino
    (37) expresion -> . expresion MULT termino
    (38) expresion -> . expresion DIV termino
    (39) expresion -> . termino
    (40) termino -> . IDENTIFICADOR
    (41) termino -> . NUMERO
    (42) termino -> . DECIMAL
    (43) termino -> . CARACTER
    (44) termino -> . TRUE
    (45) termino -> . FALSE
    (46) termino -> . PARIZQ expresion PARDER

    IDENTIFICADOR   shift and go to state 29
    NUMERO          shift and go to state 32
    DECIMAL         shift and go to state 33
    CARACTER        shift and go to state 34
    TRUE            shift and go to state 35
    FALSE           shift and go to state 36
    PARIZQ          shift and go to state 37

    condicion                      shift and go to state 39
    expresion                      shift and go to state 40
    termino                        shift and go to state 31

state 26

    (21) estructura_mientras -> MIENTRAS PARIZQ . condicion PARDER LLAVEIZQ declaraciones LLAVEDER
    (29) condicion -> . expresion IGUAL expresion
    (30) condicion -> . expresion DIFERENTE expresion
    (31) condicion -> . expresion MENOR expresion
    (32) condicion -> . expresion MAYOR expresion
    (33) condicion -> . expresion MENORIGUAL expresion
    (34) condicion -> . expresion MAYORIGUAL expresion
    (35) expresion -> . expresion SUMA termino
    (36) expresion -> . expresion RESTA termino
    (37) expresion -> . expresion MULT termino
    (38) expresion -> . expresion DIV termino
    (39) expresion -> . termino
    (40) termino -> . IDENTIFICADOR
    (41) termino -> . NUMERO
    (42) termino -> . DECIMAL
    (43) termino -> . CARACTER
    (44) termino -> . TRUE
    (45) termino -> . FALSE
    (46) termino -> . PARIZQ expresion PARDER

    IDENTIFICADOR   shift and go to state 29
    NUMERO          shift and go to state 32
    DECIMAL         shift and go to state 33
    CARACTER        shift and go to state 34
    TRUE            shift and go to state 35
    FALSE           shift and go to state 36
    PARIZQ          shift and go to state 37
